--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -21,7 +21,7 @@
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                        <a href="{% url 'catalog:prod_info' object.pk %}" class="btn btn-sm btn-outline-secondary">О товаре</a>
+                        <a href="{% url 'catalog:prodinfo' object.pk %}" class="btn btn-sm btn-outline-secondary">О товаре</a>
                         <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
                     </div>
                 </div>
