--- a/catalog/templates/catalog/prod_info.html
+++ b/catalog/templates/catalog/prod_info.html
@@ -1,26 +1,23 @@
 {% extends 'catalog/base.html' %}
 {% block content %}
 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-    {% for object in object_list %}
     <div class="col">
         <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                 xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                 preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#55595c"/>
-                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-            </svg>
+            <img class="card-img-top"
+                 src="/media/{{ object.image }}"
+                 alt="Изображение не найденно"
+                 style="width: 200px; height: 200px;">
 
             <div class="card-body">
                 <p class="card-text">
-                    <ul>
-                <li>{{ object.name }}</li>
-                <li>Категория: {{ object.category }}</li>
-                <li>{{ object.description }}</li>
-                <li>{{ object.price }} р.</li>
-                <li>Дата создания: {{ object.date_of_creation }} р.</li>
-                <li>Дата изменения: {{ object.last_modified_date }} р.</li>
-            </ul>
+                <ul>
+                    <li>{{ object.name }}</li>
+                    <li>Категория: {{ object.category }}</li>
+                    <li>{{ object.description }}</li>
+                    <li>{{ object.price }} р.</li>
+                    <li>Дата создания: {{ object.date_of_creation }} р.</li>
+                    <li>Дата изменения: {{ object.last_modified_date }} р.</li>
+                </ul>
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
@@ -29,6 +26,5 @@
             </div>
         </div>
     </div>
-    {%endfor %}
 </div>
 {% endblock %}
