--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -6,7 +6,7 @@
     <div class="col">
         <div class="card shadow-sm">
             <img class="card-img-top"
-                 src="/media/{{ object.image }}"
+                 src="{{ object.image|mediapath }}"
                  alt="Изображение не найденно"
                  style="width: 200px; height: 200px;">
 
