--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -38,6 +38,7 @@
 
 
 
+
     </style>
 
 
@@ -57,8 +58,8 @@
                 <div class="col-sm-4 offset-md-1 py-4">
                     <h4 class="text-white">Contact</h4>
                     <ul class="list-unstyled">
-                        <li><a href="{ % url 'blog' %}" class="text-white">Блог</a></li>
-                        <li><a href="#" class="text-white">Like on Facebook</a></li>
+                        <li><a href="{% url 'catalog:index' %}" class="text-white">Главная</a></li>
+                        <li><a href="{% url 'blog:blog' %}" class="text-white">Блог</a></li>
                         <li><a href="#" class="text-white">Email me</a></li>
                     </ul>
                 </div>
