--- a/catalog/templates/catalog/prod_info.html
+++ b/catalog/templates/catalog/prod_info.html
@@ -14,9 +14,12 @@
                     <li>{{ object.name }}</li>
                     <li>Категория: {{ object.category }}</li>
                     <li>{{ object.description }}</li>
-                    <li>{{ object.price }} р.</li>
-                    <li>Дата создания: {{ object.date_of_creation }} р.</li>
-                    <li>Дата изменения: {{ object.last_modified_date }} р.</li>
+                    <li>Цена: {{ object.price }} р.</li>
+                    <li>Дата создания: {{ object.date_of_creation }}</li>
+                    <li>{% if object.last_modified_date %}
+                        Дата изменения: {{ object.last_modified_date }}
+                        {% endif %}
+                    </li>
                 </ul>
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
