--- a/blog/templates/blog/blog_form.html
+++ b/blog/templates/blog/blog_form.html
@@ -11,6 +11,7 @@
                         {{ form.as_p }}
                         <button type="submit" class="btn btn-success">
                             {% if object %}
+                            {{ object.last_modified_date = datetime.datetime.now() ))
                                 Сохранить
                             {% else %}
                                 Создать
