--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -60,6 +60,13 @@
                     <ul class="list-unstyled">
                         <li><a href="{% url 'catalog:index' %}" class="text-white">Главная</a></li>
                         <li><a href="{% url 'blog:blog' %}" class="text-white">Блог</a></li>
+                        {% if user.is_authenticated %}
+                            <li><a href="{% url 'users:profile' %}" class="text-white">Профиль</a></li>
+                            <li><a href="{% url 'users:logout' %}" class="text-white">Выход</a></li>
+                        {% else %}
+                            <li><a href="{% url 'users:login' %}" class="text-white">Вход</a></li>
+                            <li><a href="{% url 'users:register' %}" class="text-white">Регистрация</a></li>
+                        {% endif %}
                         <li><a href="#" class="text-white">Email me</a></li>
                     </ul>
                 </div>
