--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -3,36 +3,42 @@
 {% block content %}
 <div class="col-12 mb-5">
     <h1>Товары</h1>
+    {% if user.is_authenticated %}
     <a href="{% url 'catalog:prod_create' %}" class="btn btn-outline-primary">Добавить товар</a>
+    {% endif %}
 </div>
 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-    {% for object in object_list %}
+    {% for product in object_list %}
     <div class="col">
         <div class="card shadow-sm">
             <img class="card-img-top"
-                 src="{{ object.image|mediapath }}"
+                 src="{{ product.image|mediapath }}"
                  alt="Изображение не найденно"
                  style="width: 200px; height: 200px;">
 
             <div class="card-body">
                 <p class="card-text">
-                    <ul>
-                <li>{{ object.name }}</li>
-                <li>Категория: {{ object.category }}</li>
-                <li>{{ object.description|slice:100 }}...</li>
-                <li>{{ object.price }} р.</li>
-                {% for version in object.version_set.all %}
-                {% if object.version_number  %}
-                <li>{{ object.version_number }} № {{ object.version_name }}</li>
-                {% endif %}
-                {% endfor %}
-            </ul>
+                <ul>
+                    <li>{{ product.name }}</li>
+                    <li>Категория: {{ product.category }}</li>
+                    <li>{{ product.description|slice:100 }}...</li>
+                    <li>{{ product.price }} р.</li>
+                    {% for version in product.versions.all %}
+                    {% if version.is_active %}
+                    <li>{{ version.version_number }} № {{ version.version_name }}</li>
+                    {% endif %}
+                    {% endfor %}
+                    <li><span class="text-muted">Создатель: {{ product.owner|default:"system" }}</span></li>
+                </ul>
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                        <a href="{% url 'catalog:prodinfo' object.pk %}" class="btn btn-sm btn-outline-secondary">О товаре</a>
-                        <a href="{% url 'catalog:prod_update' object.pk %}" class="btn btn-sm btn-outline-secondary">Изменить</a>
-                        <a href="{% url 'catalog:prod_delete' object.pk %}" class="btn btn-danger">Удалить</a>
+                        <a href="{% url 'catalog:prodinfo' product.pk %}" class="btn btn-sm btn-outline-secondary">О
+                            товаре</a>
+                        {% if user.is_authenticated %}
+                        <a href="{% url 'catalog:prod_update' product.pk %}" class="btn btn-sm btn-outline-secondary">Изменить</a>
+                        <a href="{% url 'catalog:prod_delete' product.pk %}" class="btn btn-danger">Удалить</a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
