--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="col-12 mb-5">
     <h1>Товары</h1>
-    {% if user.is_authenticated %}
+    {% if perms.catalog.add_product %}
     <a href="{% url 'catalog:prod_create' %}" class="btn btn-outline-primary">Добавить товар</a>
     {% endif %}
 </div>
@@ -35,8 +35,10 @@
                     <div class="btn-group">
                         <a href="{% url 'catalog:prodinfo' product.pk %}" class="btn btn-sm btn-outline-secondary">О
                             товаре</a>
-                        {% if user.is_authenticated %}
-                        <a href="{% url 'catalog:prod_update' product.pk %}" class="btn btn-sm btn-outline-secondary">Изменить</a>
+                        {% if perms.catalog.change_product %}
+                        <a href="{% url 'catalog:prod_update' product.pk %}" class="btn btn-sm btn-outline-primary">Изменить</a>
+                        {% endif %}
+                        {% if perms.catalog.delete_product %}
                         <a href="{% url 'catalog:prod_delete' product.pk %}" class="btn btn-danger">Удалить</a>
                         {% endif %}
                     </div>
