--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -20,6 +20,7 @@
                     </div>
                 </div>
             </div>
+            {% if perms.catalog.change_version %}
             <div class="col-6">
                 <div class="card">
                     <div class="card-body">
@@ -30,6 +31,7 @@
                     </div>
                 </div>
             </div>
+            {% endif %}
         </div>
     </form>
 </div>
